--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <button>
-            <input placeholder="Search">
-            <button>
+            <input placeholder="Search" class="input">
+            <button class="btn">
+                P
             </button>
-        </button>
     </div>
 </body>
 <script src="index.js"></script>    
