--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-            <input placeholder="Search" class="input">
+            <input type="text" placeholder="Search" class="input">
             <button class="btn">
-                P
+                <img src="./img/search.png" class="img">
             </button>
     </div>
 </body>
